--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "packageManager": "pnpm@7.5.0",
   "scripts": {
-    "dev": "node ./dev.js",
-    "dev:ui": "cd ui && pnpm run dev",
     "dev:packages": "ts-node ./scripts/rollupWatch.ts",
     "build:packages": "ts-node ./scripts/rollupBuild.ts",
     "lint": "eslint --cache --ext ts,tsx .",
     "lint:fix": "pnpm run lint --fix",
     "prettier": "prettier --ignore-path .prettierignore --write .",
     "clean": "pnpm -p -r -c exec rm -rf dist dev .cache",
-    "purge": "pnpm -p -r -c exec rm -rf node_modules"
+    "purge": "pnpm -p -r -c exec rm -rf node_modules",
+    "docs:dev": "vitepress dev app",
+    "docs:build": "vitepress build app",
+    "docs:preview": "vitepress preview app"
   },
   "husky": {
     "hooks": {
@@ -24,8 +25,10 @@
     }
   },
   "devDependencies": {
+    "@algolia/client-search": "^4.15.0",
     "@babel/core": "^7.21.0",
     "@babel/runtime": "^7.21.0",
+    "@babel/standalone": "^7.21.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
@@ -33,6 +36,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.35.0",
@@ -43,12 +47,15 @@
     "husky": "^8.0.2",
     "lodash": "^4.17.21",
     "prettier": "^2.8.4",
+    "r-store": "workspaces: *",
     "react": "^18.0.2",
+    "react-dom": "^18.2.0",
     "rollup": "^3.18.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.7.4",
-    "v-r-store": "workspaces: *"
+    "vitepress": "1.0.0-alpha.60",
+    "vue": "^3.2.47"
   }
 }
