--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: install pnpm
+        uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v3
         with:
           node-version: 18
