--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,12 +8,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    # permissions:
+    #   pages: write
+    #   id-token: write
+    # environment:
+    #   name: github-pages
+    #   url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - uses: actions/checkout@v3
@@ -40,6 +40,7 @@ jobs:
       - uses: actions/upload-pages-artifact@v1
         with:
           path: ./app/.vitepress/dist
+
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v1
