--- a/packages/r-store/tsconfig.json
+++ b/packages/r-store/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "rootDir": "src",
     "target": "ES6",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "jsx": "react-jsx"
   },
   "include": ["./src"],
   "exclude": ["node_modules"]
