--- a/package.json
+++ b/package.json
@@ -29,29 +29,19 @@
     "@babel/core": "^7.21.4",
     "@babel/runtime": "^7.21.0",
     "@babel/standalone": "^7.21.4",
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-replace": "^5.0.2",
     "@swc/core": "^1.3.50",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.38.0",
     "husky": "^8.0.2",
     "lodash": "^4.17.21",
     "prettier": "^2.8.7",
+    "project-tool": "git+ssh://git@github.com:MrWangJustToDo/project-tool.git",
     "r-store": "workspaces: *",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^3.20.2",
-    "rollup-plugin-typescript2": "^0.34.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.7.4",
