--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.1.0",
   "license": "MIT",
-  "name": "reactive-store",
+  "name": "reactivity-store-project",
   "author": "MrWangJustToDo",
   "engines": {
     "node": ">=10"
@@ -27,22 +27,22 @@
   "devDependencies": {
     "@algolia/client-search": "^4.15.0",
     "@swc/core": "^1.3.56",
-    "@types/lodash": "^4.14.194",
-    "@types/node": "^20.1.0",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "eslint": "^8.40.0",
     "husky": "^8.0.2",
     "lodash": "^4.17.21",
     "prettier": "^2.8.8",
     "project-tool": "git+ssh://git@github.com:MrWangJustToDo/project-tool.git",
-    "r-store": "workspaces: *",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reactivity-store": "workspaces: *",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.7.4",
-    "vitepress": "1.0.0-alpha.65",
-    "vue": "^3.2.47"
+    "vitepress": "1.0.0-beta.2",
+    "vue": "^3.3.4"
   }
 }
