--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactivity-store",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": "MrWangJustToDo",
   "license": "MIT",
   "description": "a reactive store, make you write reactive logic in react app",
@@ -53,10 +53,14 @@
     "state-management, reactive, vue, react"
   ],
   "dependencies": {
+    "@vue/reactivity": "^3",
     "@vue/shared": "^3",
-    "@vue/reactivity": "^3"
+    "use-sync-external-store": "^1.2.0"
   },
   "peerDependencies": {
     "react": "^17.0.2 || ^18.2.0"
+  },
+  "devDependencies": {
+    "@types/use-sync-external-store": "^0.0.3"
   }
 }
