--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactivity-store",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "author": "MrWangJustToDo",
   "license": "MIT",
   "description": "a reactive store, make you write reactive logic in react app",
@@ -58,7 +58,8 @@
     "use-sync-external-store": "^1.2.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2 || ^18.2.0"
+    "react": "^17.0.2 || ^18.2.0",
+    "react-dom": "^17.0.2 || ^18.2.0"
   },
   "devDependencies": {
     "@types/use-sync-external-store": "^0.0.3"
