--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -42,7 +42,8 @@
         "format": "umd",
         "multiple": true,
         "globals": {
-          "react": "React"
+          "react": "React",
+          "react-dom": "ReactDOM"
         },
         "name": "RStore",
         "sourcemap": true
