--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactivity-store",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "author": "MrWangJustToDo",
   "license": "MIT",
   "description": "a reactive store, make you write reactive logic in react app",
@@ -11,6 +11,7 @@
   "types": "./dist/index.d.ts",
   "files": [
     "index.js",
+    "index.d.ts",
     "dist"
   ],
   "sideEffects": false,
