--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -3,15 +3,17 @@
   "version": "0.2.1",
   "author": "MrWangJustToDo",
   "license": "MIT",
-  "description": "a reactive store, make you write reactive logic in react app",
+  "description": "a reactive store, make you write reactive logic in react app just like zustand",
   "main": "index.js",
   "module": "./dist/esm/index.js",
   "unpkg": "./dist/umd/index.development.js",
   "jsdelivr": "./dist/umd/index.development.js",
-  "types": "./dist/index.d.ts",
+  "types": "./index.d.ts",
   "files": [
     "index.js",
     "index.d.ts",
+    "react.js",
+    "react.d.ts",
     "dist"
   ],
   "sideEffects": false,
@@ -21,36 +23,56 @@
     "directory": "packages/r-store"
   },
   "homepage": "https://mrwangjusttodo.github.io/r-store",
-  "buildOptions": {
-    "input": "./src/index.ts",
-    "output": [
-      {
-        "dir": "./dist",
-        "entryFileNames": "cjs/index.js",
-        "format": "cjs",
-        "multiple": true,
-        "sourcemap": true
-      },
-      {
-        "dir": "./dist",
-        "entryFileNames": "esm/index.js",
-        "format": "esm",
-        "sourcemap": true
-      },
-      {
-        "dir": "./dist",
-        "entryFileNames": "umd/index.js",
-        "format": "umd",
-        "multiple": true,
-        "globals": {
-          "react": "React",
-          "react-dom": "ReactDOM"
+  "buildOptions": [
+    {
+      "input": "./src/index.ts",
+      "output": [
+        {
+          "dir": "./dist",
+          "entryFileNames": "cjs/index.js",
+          "format": "cjs",
+          "multiple": true,
+          "sourcemap": true
         },
-        "name": "RStore",
-        "sourcemap": true
-      }
-    ]
-  },
+        {
+          "dir": "./dist",
+          "entryFileNames": "esm/index.js",
+          "format": "esm",
+          "sourcemap": true
+        },
+        {
+          "dir": "./dist",
+          "entryFileNames": "umd/index.js",
+          "format": "umd",
+          "multiple": true,
+          "globals": {
+            "react": "React",
+            "react-dom": "ReactDOM"
+          },
+          "name": "RStore",
+          "sourcemap": true
+        }
+      ]
+    },
+    {
+      "input": "./src/react.ts",
+      "output": [
+        {
+          "dir": "./dist",
+          "entryFileNames": "cjs/react.js",
+          "format": "cjs",
+          "multiple": true,
+          "sourcemap": true
+        },
+        {
+          "dir": "./dist",
+          "entryFileNames": "esm/react.js",
+          "format": "esm",
+          "sourcemap": true
+        }
+      ]
+    }
+  ],
   "keywords": [
     "state-management, reactive, vue, react"
   ],
