--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   },
   "devDependencies": {
     "@algolia/client-search": "^4.15.0",
-    "@swc/core": "^1.3.56",
-    "@types/lodash": "^4.14.195",
+    "@swc/core": "^1.3.80",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^20.3.1",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "eslint": "^8.40.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.47.0",
     "husky": "^8.0.2",
     "lodash": "^4.17.21",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "project-tool": "git+ssh://git@github.com:MrWangJustToDo/project-tool.git",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,7 +44,7 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.7.4",
-    "vitepress": "1.0.0-beta.2",
+    "vitepress": "1.0.0-rc.10",
     "vue": "^3.3.4"
   }
 }
