--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -56,6 +56,7 @@
     },
     {
       "input": "./src/react.ts",
+      "pkgName": "react",
       "output": [
         {
           "dir": "./dist",
