--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -20,6 +20,9 @@
     "url": "git+https://github.com/MrWangJustToDo/r-store.git",
     "directory": "packages/r-store"
   },
+  "scripts": {
+    "type-gen": "api-extractor run --local --verbose"
+  },
   "homepage": "https://mrwangjusttodo.github.io/r-store",
   "buildOptions": [
     {
@@ -66,6 +69,7 @@
     "react-dom": "^17.0.2 || ^18.2.0"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.37.0",
     "@types/use-sync-external-store": "^0.0.3"
   }
 }
