--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "packageManager": "pnpm@8.6.1",
   "scripts": {
     "dev:packages": "ts-node ./scripts/rollupWatch.ts",
-    "dev:ui" : "cd packages/ui && pnpm run dev",
+    "dev:ui": "cd packages/ui && pnpm run dev",
     "build:packages": "ts-node ./scripts/rollupBuild.ts",
+    "build:type": "cd packages/r-store && pnpm run type-gen && cd ../../ && ts-node ./scripts/clearTemp.ts",
     "lint": "eslint --cache --ext ts,tsx .",
     "lint:fix": "pnpm run lint --fix",
     "prettier": "prettier --ignore-path .prettierignore --write .",
