--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev:packages": "ts-node ./scripts/rollupWatch.ts",
     "dev:ui": "cd packages/ui && pnpm run dev",
     "build:packages": "ts-node ./scripts/rollupBuild.ts",
-    "build:type": "cd packages/r-store && pnpm run type-gen && cd ../../ && ts-node ./scripts/clearTemp.ts",
+    "build:type-gen": "cd packages/r-store && pnpm run type-gen",
+    "build:type-copy": "ts-node ./scripts/clearTemp.ts",
+    "build:type": "pnpm run build:type-gen && pnpm run build:type-copy",
     "build": "pnpm run build:packages && pnpm run build:type",
     "lint": "eslint --cache --ext ts,tsx .",
     "lint:fix": "pnpm run lint --fix",
