--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.7.0",
     "typescript": "^5.3.3",
-    "vitepress": "1.1.0",
+    "vitepress": "^1.3.4",
     "vue": "^3.4.38"
   }
 }
