--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
   },
   "devDependencies": {
     "@algolia/client-search": "^4.21.1",
+    "@shikijs/twoslash": "^1.22.0",
+    "@shikijs/vitepress-twoslash": "^1.22.0",
     "@swc/core": "^1.7.14",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.0",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "eslint": "^8.57.0",
-    "highlight.js": "^11.10.0",
     "husky": "^8.0.2",
     "lodash": "^4.17.21",
     "prettier": "^3.3.3",
@@ -45,6 +46,7 @@
     "react-dom": "^18.2.0",
     "reactivity-store": "workspaces: *",
     "search-insights": "^2.17.0",
+    "shiki": "^1.22.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.7.0",
     "typescript": "^5.3.3",
