--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tslib": "^2.7.0",
     "typescript": "^5.3.3",
     "vitepress": "^1.3.4",
-    "vue": "^3.4.38"
+    "vue": "^3.4.38",
+    "zustand": "^5.0.0"
   }
 }
