--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -67,8 +67,7 @@
     "use-sync-external-store": "^1.2.2"
   },
   "peerDependencies": {
-    "react": "^17.0.2 || ^18.2.0",
-    "react-dom": "^17.0.2 || ^18.2.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.47.7",
