--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^22.8.5",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@vue/reactivity": "~3.5.13",
     "eslint": "^8.57.0",
     "husky": "^8.0.2",
     "lodash": "^4.17.21",
@@ -51,7 +52,7 @@
     "tslib": "^2.8.0",
     "typescript": "^5.3.3",
     "vitepress": "^1.3.4",
-    "vue": "^3.5.12",
+    "vue": "^3.5.13",
     "zustand": "^5.0.0"
   }
 }
