--- a/packages/r-store/tsconfig.json
+++ b/packages/r-store/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "ES6",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
     "stripInternal": true
   },
