--- a/packages/r-store/package.json
+++ b/packages/r-store/package.json
@@ -33,14 +33,12 @@
           "entryFileNames": "cjs/index.js",
           "format": "cjs",
           "type": true,
-          "multiple": true,
-          "sourcemap": true
+          "multiple": true
         },
         {
           "dir": "./dist",
           "entryFileNames": "esm/index.mjs",
-          "format": "esm",
-          "sourcemap": true
+          "format": "esm"
         },
         {
           "dir": "./dist",
@@ -51,8 +49,7 @@
             "react": "React",
             "react-dom": "ReactDOM"
           },
-          "name": "RStore",
-          "sourcemap": true
+          "name": "RStore"
         }
       ]
     }
